Implement Umbral Sight

--- a/lang/en.json
+++ b/lang/en.json
@@ -7,5 +7,6 @@
     "VISION5E.Echolocation": "Echolocation",
     "VISION5E.Hearing": "Hearing",
     "VISION5E.Inaudible": "Inaudible",
-    "VISION5E.LightPerception": "Light Perception"
+    "VISION5E.LightPerception": "Light Perception",
+    "VISION5E.UmbralSight": "Umbral Sight"
 }
