Add Ghostly Gaze

--- a/lang/en.json
+++ b/lang/en.json
@@ -5,6 +5,7 @@
     "VISION5E.DetectThoughts": "Detect Thoughts",
     "VISION5E.DevilsSight": "Devil's Sight",
     "VISION5E.Echolocation": "Echolocation",
+    "VISION5E.GhostlyGaze": "Ghostly Gaze",
     "VISION5E.Hearing": "Hearing",
     "VISION5E.Inaudible": "Inaudible",
     "VISION5E.LightPerception": "Light Perception",
