--- a/lang/en.json
+++ b/lang/en.json
@@ -13,5 +13,7 @@
     "VISION5E.LightPerception": "Light Perception",
     "VISION5E.UmbralSight": "Umbral Sight",
     "VISION5E.Settings.DefaultHearingRangeN": "Default Hearing Range",
-    "VISION5E.Settings.DefaultHearingRangeL": "Configure how far tokens can hear by default. Requires the world to be reloaded."
+    "VISION5E.Settings.DefaultHearingRangeL": "Configure how far tokens can hear by default. Requires the world to be reloaded.",
+    "VISION5E.Settings.DefaultOutlineThicknessN": "Thickness of Imprecise Sense Outline",
+    "VISION5E.Settings.DefaultOutlineThicknessL": "Configure the outline thickness of Tokens seen by Imprecise Senses. Requires the world to be reloaded."
 }
