--- a/lang/en.json
+++ b/lang/en.json
@@ -7,6 +7,7 @@
     "VISION5E.DevilsSight": "Devil's Sight",
     "VISION5E.DivineSense": "Divine Sense",
     "VISION5E.Echolocation": "Echolocation",
+    "VISION5E.Ethereal": "Ethereal",
     "VISION5E.GhostlyGaze": "Ghostly Gaze",
     "VISION5E.Hearing": "Hearing",
     "VISION5E.Inaudible": "Inaudible",
