Add Ethereal Sight

--- a/lang/en.json
+++ b/lang/en.json
@@ -8,6 +8,7 @@
     "VISION5E.DivineSense": "Divine Sense",
     "VISION5E.Echolocation": "Echolocation",
     "VISION5E.Ethereal": "Ethereal",
+    "VISION5E.EtherealSight": "Ethereal Sight",
     "VISION5E.GhostlyGaze": "Ghostly Gaze",
     "VISION5E.Hearing": "Hearing",
     "VISION5E.Inaudible": "Inaudible",
