Handle Devil's Sight invocation feat

--- a/lang/en.json
+++ b/lang/en.json
@@ -12,6 +12,7 @@
     "VISION5E.GhostlyGaze": "Ghostly Gaze",
     "VISION5E.Hearing": "Hearing",
     "VISION5E.Inaudible": "Inaudible",
+    "VISION5E.InvocationDevilsSight": "Invocation: Devil's Sight",
     "VISION5E.LightPerception": "Light Perception",
     "VISION5E.MagicAwareness": "Magic Awareness",
     "VISION5E.UmbralSight": "Umbral Sight",
