--- a/lang/en.json
+++ b/lang/en.json
@@ -1,4 +1,5 @@
 {
+    "VISION5E.Blindsense": "Blindsense",
     "VISION5E.Burrowing": "Burrowing",
     "VISION5E.DetectEvilAndGood": "Detect Evil and Good",
     "VISION5E.DetectMagic": "Detect Magic",
