--- a/lang/en.json
+++ b/lang/en.json
@@ -17,6 +17,7 @@
     "VISION5E.LightPerception": "Light Perception",
     "VISION5E.MagicAwareness": "Magic Awareness",
     "VISION5E.UmbralSight": "Umbral Sight",
+    "VISION5E.SenseMagic": "Sense Magic",
     "VISION5E.Settings.DefaultHearingRangeN": "Default Hearing Range",
     "VISION5E.Settings.DefaultHearingRangeL": "Configure how far tokens can hear by default. Requires the world to be reloaded."
 }
