--- a/lang/en.json
+++ b/lang/en.json
@@ -14,10 +14,13 @@
     "VISION5E.Hearing": "Hearing",
     "VISION5E.Inaudible": "Inaudible",
     "VISION5E.InvocationDevilsSight": "Invocation: Devil's Sight",
+    "VISION5E.InvocationWitchSight": "Invocation: Witch Sight",
     "VISION5E.LightPerception": "Light Perception",
     "VISION5E.MagicAwareness": "Magic Awareness",
     "VISION5E.UmbralSight": "Umbral Sight",
+    "VISION5E.Shapechanger": "Shapechanger",
     "VISION5E.SenseMagic": "Sense Magic",
+    "VISION5E.WitchSight": "Witch Sight",
     "VISION5E.Settings.DefaultHearingRangeN": "Default Hearing Range",
     "VISION5E.Settings.DefaultHearingRangeL": "Configure how far tokens can hear by default. Requires the world to be reloaded."
 }
