Add localization for See Invisibility

--- a/lang/de.json
+++ b/lang/de.json
@@ -19,6 +19,7 @@
     "VISION5E.LightPerception": "Lichtwahrnehmung",
     "VISION5E.MagicAwareness": "Magische Wahrnehmung",
     "VISION5E.UmbralSight": "Düstersicht",
+    "VISION5E.SeeInvisibility": "Unsichtbares sehen",
     "VISION5E.Shapechanger": "Gestaltwandler",
     "VISION5E.SenseMagic": "Magie spüren",
     "VISION5E.WitchSight": "Hexensicht",
