--- a/lang/en.json
+++ b/lang/en.json
@@ -19,6 +19,7 @@
     "VISION5E.LightPerception": "Light Perception",
     "VISION5E.MagicAwareness": "Magic Awareness",
     "VISION5E.UmbralSight": "Umbral Sight",
+    "VISION5E.SeeInvisibility": "See Invisibility",
     "VISION5E.Shapechanger": "Shapechanger",
     "VISION5E.SenseMagic": "Sense Magic",
     "VISION5E.WitchSight": "Witch Sight",
