--- a/lang/de.json
+++ b/lang/de.json
@@ -17,5 +17,6 @@
     "VISION5E.SeeInvisibility": "Unsichtbares sehen",
     "VISION5E.WitchSight": "Hexensicht",
     "VISION5E.Settings.DefaultHearingRangeN": "Standard-Hörweite",
-    "VISION5E.Settings.DefaultHearingRangeL": "Legt fest, wie weit Spielfiguren standardmäßig hören können. Erfordert Neuladen."
+    "VISION5E.Settings.DefaultHearingRangeL": "Legt fest, wie weit Spielfiguren standardmäßig hören können. Erfordert Neuladen.",
+    "VISION5E.Settings.UnitsL": "Legt fest, welche Längeneinheit benutzt wird. Erfordert Neuladen."
 }
