--- a/lang/en.json
+++ b/lang/en.json
@@ -17,5 +17,6 @@
     "VISION5E.SeeInvisibility": "See Invisibility",
     "VISION5E.WitchSight": "Witch Sight",
     "VISION5E.Settings.DefaultHearingRangeN": "Default Hearing Range",
-    "VISION5E.Settings.DefaultHearingRangeL": "Configure how far tokens can hear by default. Requires the world to be reloaded."
+    "VISION5E.Settings.DefaultHearingRangeL": "Configure how far tokens can hear by default. Requires the world to be reloaded.",
+    "VISION5E.Settings.UnitsL": "Configure which unit of length is used. Requires the world to be reloaded."
 }
