--- a/lang/en.json
+++ b/lang/en.json
@@ -18,5 +18,7 @@
     "VISION5E.WitchSight": "Witch Sight",
     "VISION5E.Settings.DefaultHearingRangeN": "Default Hearing Range",
     "VISION5E.Settings.DefaultHearingRangeL": "Configure how far tokens can hear by default. Requires the world to be reloaded.",
+    "VISION5E.Settings.DefaultHearingRangeFormulaN": "Use Hearing Range Formula",
+    "VISION5E.Settings.DefaultHearingRangeFormulaL": "Use a formula for hearing range. Overrides default hearing range. Requires the world to be reloaded.",
     "VISION5E.Settings.UnitsL": "Configure which unit of length is used. Requires the world to be reloaded."
 }
