--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -1,12 +1,12 @@
 {
-    "VISION5E.Blindsense": "Percepção às Cegas",
+    "VISION5E.Blindsense": "Sentido às Cegas",
     "VISION5E.Burrowing": "Escavação",
     "VISION5E.DetectEvilAndGood": "Detectar o Bem e o Mal",
     "VISION5E.DetectMagic": "Detectar Magia",
     "VISION5E.DetectPoisonAndDisease": "Detectar Veneno e Doença",
     "VISION5E.DetectThoughts": "Detectar Pensamentos",
-    "VISION5E.DevilsSight": "Visão Diabólica",
-    "VISION5E.DivineSense": "Senso Divino",
+    "VISION5E.DevilsSight": "Visão do Diabo",
+    "VISION5E.DivineSense": "Sentido Divino",
     "VISION5E.Echolocation": "Ecolocalização",
     "VISION5E.Ethereal": "Etéreo",
     "VISION5E.EtherealSight": "Visão Etérea",
@@ -14,7 +14,7 @@
     "VISION5E.Hearing": "Audição",
     "VISION5E.Inaudible": "Inaudível",
     "VISION5E.LightPerception": "Percepção da Luz",
-    "VISION5E.SeeInvisibility": "Ver Invisibilidade",
+    "VISION5E.SeeInvisibility": "Ver o Invisível",
     "VISION5E.WitchSight": "Visão de Bruxa",
     "VISION5E.Settings.DefaultHearingRangeN": "Alcance de Audição Padrão",
     "VISION5E.Settings.DefaultHearingRangeL": "Configure o quão longe tokens podem ouvir por padrão. Requer que o mundo seja reiniciado.",
