Update Blindsense translation

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -1,5 +1,5 @@
 {
-    "VISION5E.Blindsense": "Sentido às Cegas",
+    "VISION5E.Blindsense": "Sentido Cego",
     "VISION5E.Burrowing": "Escavação",
     "VISION5E.DetectEvilAndGood": "Detectar o Bem e o Mal",
     "VISION5E.DetectMagic": "Detectar Magia",
