Update Devil's Sight  translation

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -5,7 +5,7 @@
     "VISION5E.DetectMagic": "Detectar Magia",
     "VISION5E.DetectPoisonAndDisease": "Detectar Veneno e Doença",
     "VISION5E.DetectThoughts": "Detectar Pensamentos",
-    "VISION5E.DevilsSight": "Visão do Diabo",
+    "VISION5E.DevilsSight": "Visão Diabólica",
     "VISION5E.DivineSense": "Sentido Divino",
     "VISION5E.Echolocation": "Ecolocalização",
     "VISION5E.Ethereal": "Etéreo",
