--- a/lang/en.json
+++ b/lang/en.json
@@ -16,7 +16,7 @@
     "VISION5E.LightPerception": "Light Perception",
     "VISION5E.SeeInvisibility": "See Invisibility",
     "VISION5E.WitchSight": "Witch Sight",
-    "VISION5E.Settings.DefaultHearingRangeN": "Default Hearing Range",
-    "VISION5E.Settings.DefaultHearingRangeL": "Configure how far tokens can hear by default. Requires the world to be reloaded.",
-    "VISION5E.Settings.UnitsL": "Configure which unit of length is used. Requires the world to be reloaded."
+    "VISION5E.SETTINGS.defaultHearingRange.label": "Default Hearing Range",
+    "VISION5E.SETTINGS.defaultHearingRange.hint": "Configure how far tokens can hear by default. Requires the world to be reloaded.",
+    "VISION5E.TOOLTIPS.AutomaticallyManaged": "Automatically managed by Vision 5e"
 }
