--- a/lang/es.json
+++ b/lang/es.json
@@ -1,21 +1,17 @@
 {
-    "VISION5E.Blindsense": "Sentir sin ver",
-    "VISION5E.Burrowing": "Excavar",
-    "VISION5E.DetectEvilAndGood": "Detectar el bien y el mal",
-    "VISION5E.DetectMagic": "Detectar magia",
-    "VISION5E.DetectPoisonAndDisease": "Detectar venenos y enfermedades",
-    "VISION5E.DetectThoughts": "Detectar pensamientos",
-    "VISION5E.DevilsSight": "Vista del diablo",
-    "VISION5E.DivineSense": "Sentidos divinos",
-    "VISION5E.Echolocation": "Ecolocalización",
-    "VISION5E.Ethereal": "Etéreo",
-    "VISION5E.EtherealSight": "Visión etérea",
-    "VISION5E.GhostlyGaze": "Mirada fantasmal",
+    "VISION5E.Blindsense": "Sentir sin Ver",
+    "VISION5E.DetectEvilAndGood": "Detectar el Bien y el Mal",
+    "VISION5E.DetectMagic": "Detectar Magia",
+    "VISION5E.DetectPoisonAndDisease": "Detectar Venenos y Enfermedades",
+    "VISION5E.DetectThoughts": "Detectar Pensamientos",
+    "VISION5E.DevilsSight": "Vista del Diablo",
+    "VISION5E.DivineSense": "Sentidos Divinos",
+    "VISION5E.EtherealSight": "Visión Etérea",
     "VISION5E.Hearing": "Audición",
     "VISION5E.Inaudible": "Inaudible",
-    "VISION5E.LightPerception": "Percepción de luz",
-    "VISION5E.SeeInvisibility": "Ver invisibilidad",
-    "VISION5E.WitchSight": "Visión bruja",
+    "VISION5E.SeeInvisibility": "Ver Invisibilidad",
+    "VISION5E.WitchSight": "Visión Bruja",
     "VISION5E.SETTINGS.defaultHearingRange.label": "Distancia de audición por defecto",
-    "VISION5E.SETTINGS.defaultHearingRange.hint": "Configura que tan lejos pueden oír los tokens por defecto. Requiere que el mundo sea recargado."
+    "VISION5E.SETTINGS.defaultHearingRange.hint": "Configura que tan lejos pueden oír los tokens por defecto. Requiere que el mundo sea recargado.",
+    "VISION5E.TOOLTIPS.AutomaticallyManaged": "Gestionado automáticamente por Vision 5e"
 }
