--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,21 +1,17 @@
 {
     "VISION5E.Blindsense": "Perception aveugle",
-    "VISION5E.Burrowing": "Enfoui",
     "VISION5E.DetectEvilAndGood": "Détection du mal et du bien",
     "VISION5E.DetectMagic": "Détection de la magie",
     "VISION5E.DetectPoisonAndDisease": "Détection du poison et des maladies",
     "VISION5E.DetectThoughts": "Détection des pensées",
     "VISION5E.DevilsSight": "Vision du diable",
     "VISION5E.DivineSense": "Perception divine",
-    "VISION5E.Echolocation": "Écholocation",
-    "VISION5E.Ethereal": "Éthéré",
     "VISION5E.EtherealSight": "Vision éthérée",
-    "VISION5E.GhostlyGaze": "Regard fantomatique",
     "VISION5E.Hearing": "Audition",
     "VISION5E.Inaudible": "Inaudible",
-    "VISION5E.LightPerception": "Perception de la lumière",
     "VISION5E.SeeInvisibility": "Détection de l'invisibilité",
     "VISION5E.WitchSight": "Vision sorcière",
     "VISION5E.SETTINGS.defaultHearingRange.label": "Distance d'audition par défaut",
-    "VISION5E.SETTINGS.defaultHearingRange.hint": "Configurez la distance jusqu'où les tokens peuvent entendre par défaut. Un redémarrage du monde est nécessaire."
+    "VISION5E.SETTINGS.defaultHearingRange.hint": "Configurez la distance jusqu'où les tokens peuvent entendre par défaut. Un redémarrage du monde est nécessaire.",
+    "VISION5E.TOOLTIPS.AutomaticallyManaged": "Géré automatiquement par Vision 5e"
 }
