--- a/lang/de.json
+++ b/lang/de.json
@@ -9,6 +9,7 @@
     "VISION5E.EtherealSight": "Ätherische Sicht",
     "VISION5E.Hearing": "Hören",
     "VISION5E.Inaudible": "Lautlos",
+    "VISION5E.LifeSense": "Lebensgespür",
     "VISION5E.SeeInvisibility": "Unsichtbares sehen",
     "VISION5E.WitchSight": "Hexensicht",
     "VISION5E.SETTINGS.defaultHearingRange.label": "Standard-Hörweite",
