--- a/lang/es.json
+++ b/lang/es.json
@@ -9,6 +9,7 @@
     "VISION5E.EtherealSight": "Visión Etérea",
     "VISION5E.Hearing": "Audición",
     "VISION5E.Inaudible": "Inaudible",
+    "VISION5E.LifeSense": "Percepción de la Vida",
     "VISION5E.SeeInvisibility": "Ver Invisibilidad",
     "VISION5E.WitchSight": "Visión Bruja",
     "VISION5E.SETTINGS.defaultHearingRange.label": "Distancia de audición por defecto",
