--- a/lang/fr.json
+++ b/lang/fr.json
@@ -9,6 +9,7 @@
     "VISION5E.EtherealSight": "Vision éthérée",
     "VISION5E.Hearing": "Audition",
     "VISION5E.Inaudible": "Inaudible",
+    "VISION5E.LifeSense": "Perception de la vie",
     "VISION5E.SeeInvisibility": "Détection de l'invisibilité",
     "VISION5E.WitchSight": "Vision sorcière",
     "VISION5E.SETTINGS.defaultHearingRange.label": "Distance d'audition par défaut",
