--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -9,6 +9,7 @@
     "VISION5E.EtherealSight": "Visão Etérea",
     "VISION5E.Hearing": "Audição",
     "VISION5E.Inaudible": "Inaudível",
+    "VISION5E.LifeSense": "Percepção da Vida",
     "VISION5E.SeeInvisibility": "Ver o Invisível",
     "VISION5E.WitchSight": "Visão de Bruxa",
     "VISION5E.SETTINGS.defaultHearingRange.label": "Alcance de Audição Padrão",
