--- a/lang/en.json
+++ b/lang/en.json
@@ -9,6 +9,7 @@
     "VISION5E.EtherealSight": "Ethereal Sight",
     "VISION5E.Hearing": "Hearing",
     "VISION5E.Inaudible": "Inaudible",
+    "VISION5E.LifeSense": "Life Sense",
     "VISION5E.SeeInvisibility": "See Invisibility",
     "VISION5E.WitchSight": "Witch Sight",
     "VISION5E.SETTINGS.defaultHearingRange.label": "Default Hearing Range",
