Add Blood Sense

--- a/lang/de.json
+++ b/lang/de.json
@@ -1,5 +1,6 @@
 {
     "VISION5E.Blindsense": "Blindgespür",
+    "VISION5E.BloodSense": "Blutgespür",
     "VISION5E.DetectEvilAndGood": "Gutes und Böses entdecken",
     "VISION5E.DetectMagic": "Magie entdecken",
     "VISION5E.DetectPoisonAndDisease": "Gift und Krankheit entdecken",
