--- a/lang/en.json
+++ b/lang/en.json
@@ -1,5 +1,6 @@
 {
     "VISION5E.Blindsense": "Blindsense",
+    "VISION5E.BloodSense": "Blood Sense",
     "VISION5E.DetectEvilAndGood": "Detect Evil and Good",
     "VISION5E.DetectMagic": "Detect Magic",
     "VISION5E.DetectPoisonAndDisease": "Detect Poison and Disease",
