--- a/lang/es.json
+++ b/lang/es.json
@@ -1,5 +1,6 @@
 {
     "VISION5E.Blindsense": "Sentir sin Ver",
+    "VISION5E.BloodSense": "Percepción de Sangre",
     "VISION5E.DetectEvilAndGood": "Detectar el Bien y el Mal",
     "VISION5E.DetectMagic": "Detectar Magia",
     "VISION5E.DetectPoisonAndDisease": "Detectar Venenos y Enfermedades",
