--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,5 +1,6 @@
 {
     "VISION5E.Blindsense": "Perception aveugle",
+    "VISION5E.BloodSense": "Perception du sang",
     "VISION5E.DetectEvilAndGood": "Détection du mal et du bien",
     "VISION5E.DetectMagic": "Détection de la magie",
     "VISION5E.DetectPoisonAndDisease": "Détection du poison et des maladies",
