--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -1,5 +1,6 @@
 {
     "VISION5E.Blindsense": "Sentido Cego",
+    "VISION5E.BloodSense": "Percepção do Sangue",
     "VISION5E.DetectEvilAndGood": "Detectar o Bem e o Mal",
     "VISION5E.DetectMagic": "Detectar Magia",
     "VISION5E.DetectPoisonAndDisease": "Detectar Veneno e Doença",
