Add Eyes of the Grave

--- a/lang/de.json
+++ b/lang/de.json
@@ -8,6 +8,7 @@
     "VISION5E.DevilsSight": "Teufelssicht",
     "VISION5E.DivineSense": "Göttliches Gespür",
     "VISION5E.EtherealSight": "Ätherische Sicht",
+    "VISION5E.EyesOfTheGrave": "Grabesblick",
     "VISION5E.Hearing": "Hören",
     "VISION5E.Inaudible": "Lautlos",
     "VISION5E.LifeSense": "Lebensgespür",
