--- a/lang/en.json
+++ b/lang/en.json
@@ -8,6 +8,7 @@
     "VISION5E.DevilsSight": "Devil's Sight",
     "VISION5E.DivineSense": "Divine Sense",
     "VISION5E.EtherealSight": "Ethereal Sight",
+    "VISION5E.EyesOfTheGrave": "Eyes of the Grave",
     "VISION5E.Hearing": "Hearing",
     "VISION5E.Inaudible": "Inaudible",
     "VISION5E.LifeSense": "Life Sense",
