--- a/lang/es.json
+++ b/lang/es.json
@@ -8,6 +8,7 @@
     "VISION5E.DevilsSight": "Vista del Diablo",
     "VISION5E.DivineSense": "Sentidos Divinos",
     "VISION5E.EtherealSight": "Visión Etérea",
+    "VISION5E.EyesOfTheGrave": "Ojos de la Tumba",
     "VISION5E.Hearing": "Audición",
     "VISION5E.Inaudible": "Inaudible",
     "VISION5E.LifeSense": "Percepción de la Vida",
