--- a/lang/fr.json
+++ b/lang/fr.json
@@ -8,6 +8,7 @@
     "VISION5E.DevilsSight": "Vision du diable",
     "VISION5E.DivineSense": "Perception divine",
     "VISION5E.EtherealSight": "Vision éthérée",
+    "VISION5E.EyesOfTheGrave": "Œil de la tombe",
     "VISION5E.Hearing": "Audition",
     "VISION5E.Inaudible": "Inaudible",
     "VISION5E.LifeSense": "Perception de la vie",
