--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -8,6 +8,7 @@
     "VISION5E.DevilsSight": "Visão Diabólica",
     "VISION5E.DivineSense": "Sentido Divino",
     "VISION5E.EtherealSight": "Visão Etérea",
+    "VISION5E.EyesOfTheGrave": "Olhos da Sepultura",
     "VISION5E.Hearing": "Audição",
     "VISION5E.Inaudible": "Inaudível",
     "VISION5E.LifeSense": "Percepção da Vida",
