--- a/lang/en.json
+++ b/lang/en.json
@@ -12,6 +12,7 @@
     "VISION5E.Hearing": "Hearing",
     "VISION5E.Inaudible": "Inaudible",
     "VISION5E.LifeSense": "Life Sense",
+    "VISION5E.SpaceBetweenWorlds": "Space Between Worlds",
     "VISION5E.SeeInvisibility": "See Invisibility",
     "VISION5E.WitchSight": "Witch Sight",
     "VISION5E.SETTINGS.defaultHearingRange.label": "Default Hearing Range",
