--- a/lang/pl.json
+++ b/lang/pl.json
@@ -13,9 +13,13 @@
     "VISION5E.Inaudible": "Niesłyszalny",
     "VISION5E.LifeSense": "Zmysł życia",
     "VISION5E.SeeInvisibility": "Zobaczenie niewidzialnego",
-    "VISION5E.ThermalVision": "Termowizja",
+    "VISION5E.ThermalVision": "Widzenie termiczne",
     "VISION5E.WitchSight": "Wiedźmi wzrok",
+    "VISION5E.HINTS.DarknessSource": "Widzenie w ciemności i widzenie termiczne są zawsze blokowane przez źródła ciemności. Wzrok diabła i prawdziwe widzenie są blokowane tylko wtedy, gdy priorytet wynosi co najmniej 100. Wszystkie inne tryby wykrywania nigdy nie są blokowane.",
     "VISION5E.SETTINGS.defaultHearingRange.label": "Domyślny zakres słyszenia",
     "VISION5E.SETTINGS.defaultHearingRange.hint": "Konfiguruje domyślną odległość słyszalności tokenów. Wymaga przeładowania świata.",
-    "VISION5E.TOOLTIPS.AutomaticallyManaged": "Automatycznie zarządzane przez Vision 5e"
+    "VISION5E.SETTINGS.spectatorMode.label": "Tryb widza",
+    "VISION5E.SETTINGS.spectatorMode.hint": "Skonfiguruj, czy tokeny należące do aktorów, dla których gracz ma ograniczone uprawnienia, mogą zapewniać widoczność, gdy wszystkie tokeny gracza zostaną pokonane, skamieniałe lub nieprzytomne.",
+    "VISION5E.TOOLTIPS.AutomaticallyManaged": "Automatycznie zarządzane przez Vision 5e",
+    "VISION5E.TOOLTIPS.SelectVisionMode": "Wybierz tryb widoku"
 }
