--- a/lang/de.json
+++ b/lang/de.json
@@ -13,8 +13,9 @@
     "VISION5E.Inaudible": "Lautlos",
     "VISION5E.LifeSense": "Lebensgespür",
     "VISION5E.SeeInvisibility": "Unsichtbares sehen",
-    "VISION5E.ThermalVision": "Thermische Sicht",
+    "VISION5E.ThermalVision": "Wärmesicht",
     "VISION5E.WitchSight": "Hexensicht",
+    "VISION5E.HINTS.DarknessSource": "Dunkelsicht und Wärmesicht werden immer von Dunkelheitsquellen blockiert. Teufelssicht und Wahrsicht werden nur blockiert, wenn die Priorität mindestens 100 beträgt. Alle anderen Entdeckungsmodi werden niemals blockiert.",
     "VISION5E.SETTINGS.defaultHearingRange.label": "Standard-Hörweite",
     "VISION5E.SETTINGS.defaultHearingRange.hint": "Legt fest, wie weit Spielfiguren standardmäßig hören können. Erfordert Neuladen.",
     "VISION5E.SETTINGS.spectatorMode.label": "Zuschauermodus",
