Fix entry in module.json

--- a/lang/cs.json
+++ b/lang/cs.json
@@ -1,7 +1,7 @@
 {
     "VISION5E.Blindsense": "Mimozrakové vnímání",
     "VISION5E.BloodSense": "Vycítění krve",
-    "VISION5E.DetectEvilAndGood": "Najdi Zlo a Dobro",
+    "VISION5E.DetectEvilAndGood": "Najdi zlo a dobro",
     "VISION5E.DetectMagic": "Najdi magii",
     "VISION5E.DetectPoisonAndDisease": "Najdi jed a nemoc",
     "VISION5E.DetectThoughts": "Odhal myšlenky",
